fix expander z-index too small regression

--- a/get/markdown.css
+++ b/get/markdown.css
@@ -46,7 +46,7 @@
 .markdown .post .title > a { color: rgb(var(--rgb-black)); }
 .markdown .expandable { overflow: hidden; position: relative; border-bottom: 1px dashed rgb(var(--rgb-mid)) !important; }
 .markdown .expandable>code { overflow: hidden; }
-.markdown .expander { position: absolute; z-index: 2; height: 50px; top: 250px; padding-top: 34px; left: 0; right: 0; font-family: var(--font-regular); font-size: 12px; text-align: center;
+.markdown .expander { position: absolute; z-index: 99; height: 50px; top: 250px; padding-top: 34px; left: 0; right: 0; font-family: var(--font-regular); font-size: 12px; text-align: center;
                       color: rgb(var(--rgb-dark)); background: linear-gradient(to bottom, rgba(var(--rgb-light),0) 0%, rgb(var(--rgb-light)) 40%, rgb(var(--rgb-light)) 25%); }
 .markdown .expander:hover { text-decoration: underline; cursor: pointer; }
 .markdown .post .hover { display: none; }
